Fix strong letter spacings

--- a/app/assets/css/common.less
+++ b/app/assets/css/common.less
@@ -204,7 +204,7 @@ a {
 }
 .bold-regular-text {
   .text(@color-black, @font-size-medium, @font-weight-semibold);
-  letter-spacing: -0.5px;
+  letter-spacing: -0.2px;
 }
 .regular-grey-text {
   .text(@color-dark-grey);
