--- a/app/assets/css/onboarding/management.less
+++ b/app/assets/css/onboarding/management.less
@@ -101,7 +101,7 @@
 
   .strong {
     font-weight: @font-weight-semibold;
-    letter-spacing: -0.1px;
+    letter-spacing: -0.2px;
   }
 
   .black-indication {
